# deli

./: .gitignore  Cargo.toml  INTERRUPTIONS.md  LICENSE  OPTIMIZE.md  PROMPTING.md  README.md  TODO.md  debug_decode.py  debug_features.py  debug_features2.py  debug_model.py  debug_torch_features.py  export_onnx.py  fix_onnx_data.py  obs_scenes.json  push.sh  verify_nemo_features.py  verify_streaming.py
crates/audio/: Cargo.toml
crates/audio/src/: audio_in.rs  audio_out.rs  audioin.rs  audioout.rs  audiosample.rs  device.rs  error.rs  lib.rs
crates/audio/src/tests/: audioin_tests.rs  audioout_tests.rs
crates/audio/tests/: audio_in_tests.rs  audio_out_tests.rs  audioin_tests.rs  audioout_tests.rs  device_tests.rs  error_tests.rs  play.rs  record.rs
crates/com/: Cargo.toml
crates/com/src/: client.rs  error.rs  framing.rs  lib.rs  server.rs
crates/com/src/tests/: client_send_test.rs  client_tests.rs  framing_tests.rs  integration_tests.rs  server_recv_test.rs  ws_client_tests.rs
crates/com/src/ws/: client.rs  mod.rs  server.rs
crates/com/tests/: client_send_test.rs  client_tests.rs  error_tests.rs  framing_tests.rs  integration_tests.rs  server_recv_test.rs  server_tests.rs  ws_client_tests.rs  ws_integration_tests.rs  ws_server_tests.rs
crates/deli-audio/: Cargo.toml
crates/deli-audio/src/: audio_in.rs  audio_out.rs  audiosample.rs  lib.rs
crates/deli-audio/tests/: audio_in_tests.rs  audio_out_tests.rs  device_tests.rs  error_tests.rs
crates/deli-camera/: Cargo.toml
crates/deli-camera/src/: convert.rs  lib.rs  rpicam.rs  traits.rs  v4l2.rs
crates/deli-camera/tests/: config_tests.rs  convert_tests.rs  error_tests.rs  recv_tests.rs  rpicam_tests.rs  trait_tests.rs  v4l2_tests.rs
crates/deli-com/: Cargo.toml
crates/deli-com/src/: client.rs  error.rs  framing.rs  lib.rs  receiver.rs  sender.rs  server.rs
crates/deli-com/src/ws/: client.rs  server.rs
crates/deli-com/tests/: client_send_test.rs  client_tests.rs  error_tests.rs  framing_tests.rs  integration_tests.rs  receiver_tests.rs  sender_tests.rs  server_recv_test.rs  server_tests.rs  ws_client_tests.rs  ws_integration_tests.rs  ws_server_tests.rs
crates/deli-image/: Cargo.toml
crates/deli-image/src/: error.rs  image.rs  lib.rs  types.rs
crates/deli-image/tests/: decode_tests.rs  encode_tests.rs  image_tests.rs  types_tests.rs
crates/deli-infer/: Cargo.toml  build.rs
crates/deli-infer/src/: backend.rs  backendregistry.rs  detector.rs  device.rs  error.rs  inference.rs  lib.rs  modelsource.rs  postprocess.rs  registry.rs  session.rs
crates/deli-infer/src/asr/: attention.rs  audio.rs  config.rs  mod.rs  model.rs  recognizer.rs  token_decoder.rs  transcribed.rs  whisper.rs
crates/deli-infer/src/backends/: mod.rs  onnx.rs
crates/deli-infer/src/llm/: mod.rs  phi4.rs  qwen3.rs
crates/deli-infer/src/model/: backbone.rs  blocks.rs  head.rs  mod.rs  neck.rs
crates/deli-infer/src/pose/: estimator.rs  mod.rs  postprocess.rs  preprocess.rs  types.rs
crates/deli-infer/src/pose_detector/: detector.rs  mod.rs  neck.rs  postprocess.rs  types.rs
crates/deli-infer/src/tts/: kokoro.rs  vocab.rs
crates/deli-infer/tests/: api_tests.rs  asr_audio_test.rs  asr_config_test.rs  asr_model_test.rs  asr_recognizer_test.rs  asr_token_decoder_test.rs  detector_test.rs  inference_test.rs  integration_tests.rs  onnx_tests.rs  phi4_test.rs  pose_estimator_tests.rs  pose_integration_tests.rs  pose_postprocess_tests.rs  pose_preprocess_tests.rs  pose_types_tests.rs  qwen3_test.rs  tts_kokoro_test.rs  types_test.rs
crates/deli-video/: Cargo.toml
crates/deli-video/src/: error.rs  lib.rs  rpicam.rs  traits.rs  v4l2.rs  videoframe.rs
crates/deli-video/tests/: convert_tests.rs  error_tests.rs  recv_tests.rs  trait_tests.rs
crates/image/: Cargo.toml
crates/image/src/: argb.rs  error.rs  image.rs  jpeg.rs  lib.rs  pixelformat.rs  rgb.rs  u32.rs
crates/image/tests/: decode_tests.rs  encode_tests.rs  image_tests.rs
crates/inference/: Cargo.toml
crates/inference/src/: error.rs  inference.rs  lib.rs
crates/inference/src/asr/: asr.rs  (+6 more)
crates/inference/tests/: asr_audio_test.rs  asr_config_test.rs  asr_model_test.rs  asr_recognizer_test.rs  asr_token_decoder_test.rs  detector_test.rs  inference_test.rs  llama_test.rs  phi3_test.rs  qwen3_test.rs  smollm2_test.rs  streaming_asr_test.rs  tts_kokoro_test.rs  types_test.rs
crates/video/: Cargo.toml
crates/video/src/: config.rs  error.rs  lib.rs  rpicam.rs  videoerror.rs  videoformat.rs  videoframe.rs
crates/video/tests/: config_tests.rs  convert_tests.rs  error_tests.rs  recv_tests.rs  rpicam_tests.rs  trait_tests.rs  v4l2_tests.rs  videoin_tests.rs
experiments/audio/: Cargo.toml
experiments/audio/src/: play.rs  record.rs
experiments/camera-pose/: Cargo.toml
experiments/camera-pose/src/: draw.rs  main.rs
experiments/camera-pose/tests/: draw_tests.rs  main_tests.rs
experiments/camera-view/: Cargo.toml
experiments/camera-view/src/: main.rs
experiments/camera-view/tests/: main_tests.rs
experiments/camera-viewer/: Cargo.toml
experiments/camera-viewer/src/: camera.rs  lib.rs  viewer.rs
experiments/camera-viewer/tests/: frame_tests.rs
experiments/chat/: Cargo.toml
experiments/chat/src/: main.rs
experiments/llm/: Cargo.toml
experiments/llm/src/: main.rs
experiments/mimi-encode/: Cargo.toml
experiments/mimi-encode/src/: main.rs
experiments/optimize/: Cargo.toml
experiments/optimize/src/: main.rs
experiments/record-asr/: Cargo.toml
experiments/record-asr/src/: main.rs
experiments/record-diar/: Cargo.toml
experiments/record-diar/src/: main.rs
experiments/server/: Cargo.toml
experiments/server/src/: lib.rs  main.rs
experiments/silero/: Cargo.toml
experiments/silero/src/: main.rs
experiments/tts-play/: Cargo.toml
experiments/tts-play/src/: main.rs
experiments/tts-wav/: Cargo.toml
experiments/tts-wav/src/: main.rs
experiments/wav-asr/: Cargo.toml
experiments/wav-asr/src/: main.rs
experiments/wav-streaming/: Cargo.toml
experiments/wav-streaming/src/: main.rs
products/testy/robot/: Cargo.toml
(+273 files in other folders)
