[package]
name = "audio"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
hound = "3.5"
futures-util = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures-sink = "0.3"
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"
log = "0.4"
tokio = { version = "1", features = [
    "rt",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
] }
