[package]
name = "com"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
codec = { path = "../codec" }
tokio = { version = "1", features = [
    "rt",
    "net",
    "sync",
    "io-util",
    "macros",
    "time",
] }
tokio-websockets = { version = "0.11", features = [
    "client",
    "server",
    "sha1_smol",
    "fastrand",
] }
futures-core = "0.3"
futures-sink = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
http = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = { version = "0.3", features = ["sink"] }
