[package]
name = "deli-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
deli-base = { path = "../deli-base" }
futures-core = "0.3"
futures-sink = "0.3"
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
futures-core = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
