[package]
name = "deli-camera"
version = "0.1.0"
edition = "2024"

[features]
default = []
v4l2 = ["dep:v4l"]

[dependencies]
deli-base = { path = "../deli-base" }
deli-image = { path = "../deli-image" }
tokio = { version = "1", features = ["rt", "sync"] }
v4l = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }
image = { version = "0.25", features = ["jpeg"] }
