[package]
name = "deli-camera"
version = "0.1.0"
edition = "2024"

[features]
default = []
v4l2 = ["dep:v4l"]
rpicam = ["dep:libcamera"]

[dependencies]
deli-base = { path = "../deli-base" }
deli-image = { path = "../deli-image" }
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }
v4l = { version = "0.14", optional = true }
libcamera = { git = "https://github.com/Palladinium/libcamera-rs.git", branch = "libcamera-0.7.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }
image = { version = "0.25", features = ["jpeg"] }
