[package]
name = "deli-infer"
version = "0.1.0"
edition = "2024"

[dependencies]
deli-base = { path = "../deli-base" }
candle-core = "0.9"
candle-nn = "0.9"
memmap2 = "0.9"
num-traits = "0.2"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tokio = { version = "1", features = ["rt"] }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
