[package]
name = "deli-infer"
version = "0.1.0"
edition = "2024"

[dependencies]
deli-audio = { path = "../deli-audio" }
deli-base = { path = "../deli-base" }
deli-image = { path = "../deli-image" }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
memmap2 = "0.9"
num-traits = "0.2"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tokio = { version = "1", features = ["rt"] }
futures-core = "0.3"
futures-sink = "0.3"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "ort/cuda"]

[dev-dependencies]
deli-infer = { path = ".", features = ["cuda"] }
deli-audio = { path = "../deli-audio" }
deli-image = { path = "../deli-image" }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["rt", "macros"] }
