[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
audio = { path = "../audio" }
base = { path = "../base" }
image = { path = "../image" }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
memmap2 = "0.9"
num-traits = "0.2"
onnx = { path = "../onnx" }
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tokio = { version = "1", features = ["rt"] }
futures-core = "0.3"
futures-sink = "0.3"

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "onnx/cuda",
]

[dev-dependencies]
inference = { path = ".", features = ["cuda"] }
audio = { path = "../audio" }
image = { path = "../image" }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["rt", "macros"] }
