[package]
name = "video"
version = "0.1.0"
edition = "2024"

[features]
default = ["v4l2"]
v4l2 = ["dep:v4l"]
rpicam = ["dep:shiguredo_libcamera"]
realsense = ["dep:realsense-rust"]

[dependencies]
base = { path = "../base" }
image = { path = "../image" }
futures-core = "0.3"
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }
v4l = { version = "0.14", optional = true }
shiguredo_libcamera = { git = "https://github.com/shiguredo/libcamera-rs", optional = true }
realsense-rust = { version = "1.3.0", optional = true }

[dev-dependencies]
futures-core = "0.3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
crates_image = { package = "image", version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "bmp",
    "tiff",
    "webp",
] }
