[package]
name = "video"
version = "0.1.0"
edition = "2024"

[features]
default = ["v4l2"]
v4l2 = ["dep:v4l"]
rpicam = ["dep:shiguredo_libcamera", "dep:libc"]
realsense = ["dep:realsense-sys"]

[dependencies]
base = { path = "../base" }
image = { path = "../image" }
futures-core = "0.3"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
v4l = { version = "0.14", optional = true }
shiguredo_libcamera = { git = "https://github.com/shiguredo/libcamera-rs", optional = true }
realsense-sys = { version = "2.56", optional = true }
libc = { version = "0.2", optional = true }
minifb = "0.27"

[dev-dependencies]
futures-core = "0.3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
crates_image = { package = "image", version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "bmp",
    "tiff",
    "webp",
] }
