[package]
name = "audio"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "play"
path = "src/play.rs"

[[bin]]
name = "record"
path = "src/record.rs"

[dependencies]
deli-audio = { path = "../../crates/deli-audio" }
deli-base = { path = "../../crates/deli-base" }
futures-util = { version = "0.3", features = ["sink"] }
hound = "3.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
