[package]
name = "camera-pose"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "camera-pose"
path = "src/main.rs"

[dependencies]
deli-camera = { path = "../../crates/deli-camera", features = ["v4l2"] }
deli-infer = { path = "../../crates/deli-infer", features = ["onnx"] }
deli-base = { path = "../../crates/deli-base" }
minifb = "0.27"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
