[package]
name = "camera-view"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "camera-view"
path = "src/main.rs"

[dependencies]
video = { path = "../../crates/video", features = ["v4l2"] }
futures-util = "0.3"
image = { path = "../../crates/image" }
base = { path = "../../crates/base" }
minifb = "0.27"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
