[package]
name = "camera-viewer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "camera"
path = "src/camera.rs"

[[bin]]
name = "viewer"
path = "src/viewer.rs"

[dependencies]
base = { path = "../../crates/base" }
video = { path = "../../crates/video", features = ["v4l2"] }
futures-util = { version = "0.3", features = ["sink"] }
image = { path = "../../crates/image" }
com = { path = "../../crates/com" }
codec = { path = "../../crates/codec" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
minifb = "0.27"
