[package]
name = "record-diar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "record_diar"
path = "src/main.rs"

[dependencies]
inference = { path = "../../crates/inference" }
audio = { path = "../../crates/audio" }
base = { path = "../../crates/base" }
onnx = { path = "../../crates/onnx" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }

[features]
cuda = ["inference/cuda"]
