[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
deli-base = { path = "../../crates/deli-base" }
deli-video = { path = "../../crates/deli-video", features = ["rpicam"] }
deli-com = { path = "../../crates/deli-com" }
deli-image = { path = "../../crates/deli-image" }
deli-codec = { path = "../../crates/deli-codec" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
