[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
base = { path = "../../crates/base" }
video = { path = "../../crates/video", features = ["rpicam"] }
futures-util = { version = "0.3", features = ["sink"] }
com = { path = "../../crates/com" }
image = { path = "../../crates/image" }
codec = { path = "../../crates/codec" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
