[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = ["v4l2"]
rpicam = ["video/rpicam"]
v4l2 = ["video/v4l2"]
realsense = ["video/realsense"]

[dependencies]
base = { path = "../../crates/base" }
video = { path = "../../crates/video" }
futures-util = { version = "0.3", features = ["sink"] }
com = { path = "../../crates/com" }
image = { path = "../../crates/image" }
codec = { path = "../../crates/codec" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
