[package]
name = "silero"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "silero"
path = "src/main.rs"

[dependencies]
inference = { path = "../../crates/inference" }
audio = { path = "../../crates/audio" }
base = { path = "../../crates/base" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
] }
