[package]
name = "tts-wav"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tts_wav"
path = "src/main.rs"

[dependencies]
deli-infer = { path = "../../crates/deli-infer" }
deli-audio = { path = "../../crates/deli-audio" }
deli-base = { path = "../../crates/deli-base" }
futures-util = { version = "0.3", features = ["sink"] }
hound = "3.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
