[package]
name = "wav-asr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wav_asr"
path = "src/main.rs"

[dependencies]
audio = { path = "../../crates/audio" }
inference = { path = "../../crates/inference", features = ["cuda"] }
base = { path = "../../crates/base" }
futures-util = { version = "0.3", features = ["sink"] }
hound = "3.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
