[package]
name = "wav-asr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wav_asr"
path = "src/main.rs"

[dependencies]
inference = { path = "../../crates/inference" }
base = { path = "../../crates/base" }
audio = { path = "../../crates/audio" }
hound = "3.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }

[features]
cuda = ["inference/cuda"]
