[package]
name = "wav-streaming"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wav_streaming"
path = "src/main.rs"

[dependencies]
inference = { path = "../../crates/inference" }
audio = { path = "../../crates/audio" }
base = { path = "../../crates/base" }
futures-util = { version = "0.3", features = ["sink"] }
hound = "3.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
